Change font size on socials

--- a/socials.html
+++ b/socials.html
@@ -9,6 +9,6 @@ title: Socials
 
 <div class="list-group mt-4 mb-4">
   {%- for social in socials -%}
-  <a href="{{ social.url }}" class="list-group-item list-group-item-action" target="_blank">{{ social.name }}</a>
+  <a href="{{ social.url }}" class="list-group-item list-group-item-action h3" target="_blank">{{ social.name }}</a>
   {%- endfor -%}
 </div>
