--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ title: Home
 <div class="container-fluid">
   <div class="row mb-5">
     <h2 class="mb-3">Latest Blog Post</h2>
-    <div class="card">
+    <div class="card" data-bs-theme="dark">
       <div class="card-body">
-        <h5 class="card-title"><a href="{{ latestPost[0].url }}" class="link-underline link-underline-opacity-0">{{ latestPost[0].data.title }}</a></h5>
-        <h6 class="card-subtitle mb-2 text-body-secondary">{{ latestPost[0].data.date | date: "%B %d, %Y" }}</h6>
+        <h3 class="card-title"><a href="{{ latestPost[0].url }}" class="post-title-link">{{ latestPost[0].data.title }}</a></h3>
+        <h4 class="card-subtitle mb-2 text-body-secondary h5">{{ latestPost[0].data.date | date: "%B %d, %Y" }}</h4>
         <p class="card-text">{{ latestPost[0].data.page.excerpt | markdown }}</p>
         <a href="{{ latestPost[0].url }}" class="card-link">Read more...</a>
       </div>
@@ -25,10 +25,10 @@ title: Home
 
   <div class="row mb-5">
     <h2 class="mb-3">Latest Rant</h2>
-    <div class="card">
+    <div class="card" data-bs-theme="dark">
       <div class="card-body">
-        <h5 class="card-title"><a href="{{ latestRant[0].url }}" class="link-underline link-underline-opacity-0">{{ latestRant[0].data.title }}</a></h5>
-        <h6 class="card-subtitle mb-2 text-body-secondary">{{ latestRant[0].data.date | date: "%B %d, %Y" }}</h6>
+        <h3 class="card-title"><a href="{{ latestRant[0].url }}" class="post-title-link">{{ latestRant[0].data.title }}</a></h3>
+        <h4 class="card-subtitle mb-2 text-body-secondary h5">{{ latestRant[0].data.date | date: "%B %d, %Y" }}</h4>
         <p class="card-text">{{ latestRant[0].data.page.excerpt | markdown }}</p>
         <a href="{{ latestRant[0].url }}" class="card-link">Read more...</a>
       </div>
