--- a/rants.html
+++ b/rants.html
@@ -14,9 +14,9 @@ pagination:
 
 <div class="container-fluid mb-4">
   {%- for post in posts -%}
-  <div class="card mb-5">
+  <div class="card mb-5" data-bs-theme="dark">
     <div class="card-body">
-      <h2 class="card-title"><a href="{{ post.url }}" class="link-underline link-underline-opacity-0">{{ post.data.title }}</a></h2>
+      <h2 class="card-title"><a href="{{ post.url }}" class="post-title-link">{{ post.data.title }}</a></h2>
       <h3 class="card-subtitle mb-2 text-body-secondary h5">{{ post.data.date | date: "%B %d, %Y" }}</h3>
       <p class="card-text">{{ post.data.page.excerpt | markdown }}</p>
       <a href="{{ post.url }}" class="card-link">Read more...</a>
