--- a/socials.html
+++ b/socials.html
@@ -7,8 +7,8 @@ title: Socials
 <p class="lead text-center">Where you can find me</p>
 <hr />
 
-<div class="list-group mt-4 mb-4">
+<div class="list-group mt-4 mb-4" data-bs-theme="dark">
   {%- for social in socials -%}
-  <a href="{{ social.url }}" class="list-group-item list-group-item-action h3" target="_blank">{{ social.name }}</a>
+  <a href="{{ social.url }}" class="list-group-item list-group-item-action" target="_blank">{{ social.name }}</a>
   {%- endfor -%}
 </div>
