Add shipping to navbar

--- a/ships.html
+++ b/ships.html
@@ -7,7 +7,11 @@ title: Shipping Discussions
 <p class="lead text-center">Living vicariously through fictional characters</p>
 <hr />
 
-<p>Pokémon was a pretty formative franchise for me, and shipping is serious business in that community. I hold it solely responsible for my shipping addiction. With that in mind, this is a place for me to post about various pairings that I like or find particularly interesting.</p>
+<div class="container-fluid d-flex align-items-center justify-content-center mb-4">
+  <div class="w-50">
+    <p>Pokémon was a pretty formative franchise for me, and shipping is serious business in that community. I hold it solely responsible for my shipping addiction. With that in mind, this is a place for me to post about various pairings that I like or find particularly interesting.</p>
+  </div>
+</div>
 
 <hr />
 
