Tweaking font sizes

--- a/ships.html
+++ b/ships.html
@@ -8,7 +8,7 @@ title: Shipping Discussions
 <hr />
 
 <div class="container-fluid d-flex align-items-center justify-content-center mb-4">
-  <div class="w-50">
+  <div class="w-75 fs-4">
     <p>Pokémon was a pretty formative franchise for me, and shipping is serious business in that community. I hold it solely responsible for my shipping addiction. With that in mind, this is a place for me to post about various pairings that I like or find particularly interesting.</p>
   </div>
 </div>
