Increase font size on about

--- a/about.html
+++ b/about.html
@@ -6,14 +6,18 @@ title: About Me
 <h1 class="text-center">About Me</h1>
 <hr />
 
-<p>I'm Jacen, professional IT tech, wannabe content creator, and major weeb.</p>
+<div class="container-fluid d-flex align-items-center justify-content-center mb-4">
+  <div class="w-75 fs-4">
+    <p>I'm Jacen, professional IT tech, wannabe content creator, and major weeb.</p>
 
-<p>I enjoy playing with tech stuff, even when it makes things more complicated than it would be otherwise. I dabble in coding, and I know just enough to get by. I've worked in IT since 2016, so I've picked up a thing or two along the way.</p>
+    <p>I enjoy playing with tech stuff, even when it makes things more complicated than it would be otherwise. I dabble in coding, and I know just enough to get by. I've worked in IT since 2016, so I've picked up a thing or two along the way.</p>
 
-<p>In my free time, I enjoy playing rhythm games. I started with School Idol Festival, eventually transitioned to Bandori, and now I occasionally play Project Sekai. While it's not really a rhythm game as much as it is a music game, I also enjoy playing AudioSurf.</p>
+    <p>In my free time, I enjoy playing rhythm games. I started with School Idol Festival, eventually transitioned to Bandori, and now I occasionally play Project Sekai. While it's not really a rhythm game as much as it is a music game, I also enjoy playing AudioSurf.</p>
 
-<p>I also enjoy watching anime. As you might expect, I'm a big fan of the Love Live and Bandori franchises. Beyond that, I'm also a big fan of A Certain Scientific Railgun and New Game. I primarily enjoy moe, idol, and "cute girls beating up alien lifeforms" anime, although I also enjoy sports and the occasional isekai.</p>
+    <p>I also enjoy watching anime. As you might expect, I'm a big fan of the Love Live and Bandori franchises. Beyond that, I'm also a big fan of A Certain Scientific Railgun and New Game. I primarily enjoy moe, idol, and "cute girls beating up alien lifeforms" anime, although I also enjoy sports and the occasional isekai.</p>
 
-<p>I am a big fan of motorsports as well. I primarily watch NASCAR, IndyCar, and IMSA. I also really enjoy Formula E. Beyond those, I'll watch just about anything that happens to be airing on any given weekend.</p>
+    <p>I am a big fan of motorsports as well. I primarily watch NASCAR, IndyCar, and IMSA. I also really enjoy Formula E. Beyond those, I'll watch just about anything that happens to be airing on any given weekend.</p>
 
-<p>If you want to reach out, <a href="/socials">you can find my socials here.</a> I'm primarily active on Mastodon, so that's where the bulk of my activity will be. Hopefully you enjoy the content I post here.</p>
+    <p>If you want to reach out, <a href="/socials">you can find my socials here.</a> I'm primarily active on Mastodon, so that's where the bulk of my activity will be. Hopefully you enjoy the content I post here.</p>
+  </div>
+</div>
