--- a/index.html
+++ b/index.html
@@ -11,16 +11,43 @@ title: Home
 
 <div class="container-fluid">
   <div class="row mb-5">
-    <h2 class="mb-3">Latest Posts</h2>
-    {%- for post in posts -%}
-    <div class="card mb-3" data-bs-theme="dark">
-      <div class="card-body">
-        <h3 class="card-title"><a href="{{ post.url }}" class="post-title-link">{{ post.data.title }}</a></h3>
-        <h4 class="card-subtitle mb-2 text-body-secondary h5">{{ post.data.date | toLocalTime }} <span class="badge bg-secondary text-dark">{{ post.data.tags | postType }}</span></h4>
-        <p class="card-text">{{ post.data.page.excerpt | markdown }}</p>
-        <a href="{{ post.url }}" class="card-link">Read more...</a>
+    <div class="col-lg-8">
+      <h2 class="mb-3">Latest Posts</h2>
+      {%- for post in posts -%}
+      <div class="card mb-3" data-bs-theme="dark">
+        <div class="card-body">
+          <h3 class="card-title"><a href="{{ post.url }}" class="post-title-link">{{ post.data.title }}</a></h3>
+          <h4 class="card-subtitle mb-2 text-body-secondary h5">{{ post.data.date | toLocalTime }} <span class="badge bg-secondary text-dark">{{ post.data.tags | postType }}</span></h4>
+          <p class="card-text">{{ post.data.page.excerpt | markdown }}</p>
+          <a href="{{ post.url }}" class="card-link">Read more...</a>
+        </div>
+      </div>
+      {%- endfor -%}
+    </div>
+    <div class="col-lg-4">
+      <div class="card mb-3 h-card" data-bs-theme="dark">
+        <div class="card-body">
+          <h2 class="h4 card-title"><a class="post-title-link p-name u-url" href="https://jacen.moe" rel="me"><img class="profile u-photo" src="/img/you.png" alt="Avatar" /> Jacen Sekai</a></h2>
+        </div>
+      </div>
+
+      <div id="mt-container" class="mt-container">
+        <div class="mt-body" role="feed">
+          <div class="mt-loading-spinner"></div>
+        </div>
       </div>
     </div>
-    {%- endfor -%}
   </div>
 </div>
+
+<script>
+const tlOptions = {
+  instanceUrl: "https://mastodon.jacen.moe",
+  timelineType: "profile",
+  userId: "108765588060118796",
+  profileName: "@jacenboy"
+};
+window.addEventListener("load", () => {
+  const myTimeline = new MastodonTimeline.Init(tlOptions);
+});
+</script>
