Set Mastodon timeline to dark theme

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ const tlOptions = {
   userId: "108765588060118796",
   profileName: "@jacenboy",
   maxNbPostShow: "10",
-  dateFormatLocale: "en-US"
+  dateFormatLocale: "en-US",
+  defaultTheme: "dark"
 };
 window.addEventListener("load", () => {
   const myTimeline = new MastodonTimeline.Init(tlOptions);
