--- a/blog.html
+++ b/blog.html
@@ -12,11 +12,12 @@ pagination:
 <p class="lead text-center">My thoughts that I think other people deserve to read</p>
 <hr />
 
-<div class="container-fluid mb-4">
+<div class="container-fluid mb-4 h-feed">
+  <a class="u-url" href="/blog"></a>
   {%- for post in posts -%}
-  <div class="card mb-5" data-bs-theme="dark">
+  <div class="card mb-5 h-entry" data-bs-theme="dark">
     <div class="card-body">
-      <h2 class="card-title"><a href="{{ post.url }}" class="post-title-link">{{ post.data.title }}</a></h2>
+      <h2 class="card-title"><a href="{{ post.url }}" class="post-title-link u-url p-name">{{ post.data.title }}</a></h2>
       <h3 class="card-subtitle mb-2 text-body-secondary h5">{{ post.data.date | toLocalTime }}</h3>
       <p class="card-text">{{ post.data.page.excerpt | markdown }}</p>
       <a href="{{ post.url }}" class="card-link">Read more...</a>
@@ -28,10 +29,10 @@ pagination:
 <div class="container-fluid text-center mb-4">
   <div class="row">
     <div class="col">
-      {% if pagination.href.next %}<a href="{{ pagination.href.next }}" class="btn btn-primary">Older Posts</a>{% endif %}
+      {% if pagination.href.next %}<a href="{{ pagination.href.next }}" class="btn btn-primary" rel="next">Older Posts</a>{% endif %}
     </div>
     <div class="col">
-      {% if pagination.href.previous %}<a href="{{ pagination.href.previous }}" class="btn btn-primary">Newer Posts</a>{% endif %}
+      {% if pagination.href.previous %}<a href="{{ pagination.href.previous }}" class="btn btn-primary" rel="prev">Newer Posts</a>{% endif %}
     </div>
   </div>
 </div>
