Update page headers

--- a/blog.html
+++ b/blog.html
@@ -8,9 +8,7 @@ pagination:
   reverse: true
 ---
 
-<h1 class="text-center">Jacen's Blog</h1>
-<p class="lead text-center">My thoughts that I think other people deserve to read</p>
-<hr />
+<h1 class="mb-5 text-center">Jacen's Blog</h1>
 
 <div class="container-fluid mb-4 h-feed">
   <a class="u-url" href="/blog"></a>
