--- a/rants.html
+++ b/rants.html
@@ -8,9 +8,7 @@ pagination:
   reverse: true
 ---
 
-<h1 class="text-center">Jacen's Rants</h1>
-<p class="lead text-center">Less structured and more rambly posts</p>
-<hr />
+<h1 class="mb-5 text-center">Jacen's Rants</h1>
 
 <div class="container-fluid mb-4 h-feed">
   <a class="u-url" href="/rants"></a>
