Add PageFind search functionality

--- a/search.html
+++ b/search.html
@@ -7,7 +7,7 @@ title: Search
 <hr />
 
 <div class="container-fluid mb-4">
-  <script async src="https://cse.google.com/cse.js?cx=c23dce29fb3c84ce6">
-  </script>
-  <div class="gcse-search"></div>
+  <div id="search" class="search"></div>
+
+  <script src="/pagefind/pagefind-ui.js" onload="new PagefindUI({ element: '#search', showImages: false });"></script>
 </div>
