Add spacing to search page

--- a/search.html
+++ b/search.html
@@ -6,7 +6,7 @@ title: Search
 <h1 class="text-center">Search</h1>
 <hr />
 
-<div class="container-fluid mb-4">
+<div class="container-fluid mb-4" style="min-height: 45vh;">
   <div id="search" class="search"></div>
 
   <script src="/pagefind/pagefind-ui.js" onload="new PagefindUI({ element: '#search', showImages: false });"></script>
